Fixed spacing on table columns for results table.

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -195,7 +195,7 @@ th {
     text-transform: none;
 }
 
-#results-tbl > thead > tr:nth-child(2) > th:nth-child(2) {
+#results-tbl > thead > tr:last-child > th:last-child {
     width: 20px;
 }
 
